# AnchorBench

./: .gitignore  README.md  meson.build  readme.md  scan_include.py  scan_src.py
cm_sketch/: cm_sketch.h  cm_sketch_dpdk.c  cm_sketch_flow.c  cm_sketch_main.c  cm_sketch_params.c  cm_sketch_utils.c  meson.build  readme.md  replace.sh
cm_sketch/dependencies/application_common/src/: utils.c
common/: common.h  dpdk_utils.c  flow_common.c  flow_common.h  flow_parser.c  flow_parser.h  mempool.c  mempool.h
common/generator/: exponential_generator.h  generator.h
common/src/: dpdk_utils.c  dpdk_utils.h  flow_parser.h  latency.c  latency.h  mempool.c  mempool.h  offload_rules.h  utils.h  worker.c  worker.h
compress-and-encrypt-accel-close/: compress-and-encrypt-core.c  compress-and-encrypt-core.h  compress-and-encrypt-l2p.c  compress-and-encrypt-port-cfg.c  compress-and-encrypt-port-cfg.h  compress-and-encrypt-utils.c  compress-and-encrypt.c  create_randfile.sh  encoding-constants.h  encoding-core.c  encoding-port-cfg.c  encoding-utils.c  meson.build  run.sh
conf/: base.conf  doca.conf  dpdk.conf
conf/apps/: pktgen.conf  sketch.conf
dma/: dma_copy.c  dma_copy_core.c  meson.build  run_dpu.sh
dma/dma_copy_dpu/: analysis.py  analysis_latency.sh  dma_copy.c  dma_copy.h  dma_copy_core.c  dma_copy_core.h  latency.txt  mempool.c  mempool.h  meson.build  run_dpu.sh  thp.txt
dma/dma_copy_host/: dma_copy.c  dma_copy_core.c  dma_copy_core.h  meson.build  run_host.sh
dns-filter/: dns-filter-constants.h  dns-filter-l2p.c  dns-filter-port-cfg.c  dns-filter-port-cfg.h  dns-filter-utils.c  dns-filter.c  meson.build  regex_rules.txt
dns-filter-accel/: dns-filter-constants.h  dns-filter-core.c  dns-filter-core.h  dns-filter-l2p.c  dns-filter-port-cfg.h  dns-filter.c  dns-filter.h  meson.build  run.sh  run_all.sh
dns-filter-accel-close/: dns-filter-core.c  dns-filter-core.h  dns-filter-port-cfg.c  dns-filter-utils.h  dns-filter.c  dns-filter.h  dns_regex_rules.txt  run.sh  run_all.sh
dns-filter-accel-flow/: dns-filter-core.c  dns-filter-core.h  dns-filter-port-cfg.c  dns-filter-port-cfg.h  dns-filter-utils.c  dns-filter.c  run.sh
dns-filter-accel-mp-close/: dns-filter-core.c  dns-filter-core.h  dns-filter.c  dns-filter.h  run.sh
dns-filter-accel-mp-open/: dns-filter-core.c  dns-filter-core.h  dns-filter.c  meson.build
dns-filter-extractmmap/: dns-filter-core.c  dns-filter.c
doca-dns-filter/: dns_filter.c  dns_filter_core.c  dns_filter_core.h  dns_filter_params.json  install_rules.sh  meson.build  meson_options.txt  regax_rules.txt
doca-dns-filter/grpc/server/: dns_filter_gRPC_server.cpp  meson.build
doca-flow-hairpin/: flow_hairpin.c  flow_hairpin_core.c  meson.build
doca-forward/: doca-forward.c  forward.c  forward.h  meson.build
doca-ipsec/: security_gateway_core.c  security_gateway_core.h  security_gateway_rules.json
doda-ipsec/: meson.build  security_gateway.c  security_gateway_core.c  security_gateway_core.h  security_gateway_params.json
dpdk-hairpin/: config.h  flow.h  flow_hairpin.c  meson.build
dpdk-rte-flow-hairpin/: config.h  flow_hairpin.c  meson.build
encoding-accel-close/: encoding-core.c  encoding-core.h  encoding-l2p.c  encoding-port-cfg.c  encoding-port-cfg.h  encoding.c  encoding.h  meson.build
firewall/: firewall-constants.h  firewall-port-cfg.c  firewall-port-cfg.h  firewall.c  firewall.h  firewall_main.c  meson.build  run.sh
firewall-old/: flow_hairpin.c  flow_hairpin_core.c  meson.build
firewall-sw/: firewall.c  meson.build
include/: sc_app.h  sc_compile_debug.h  sc_doca.h  sc_doca_utils.h  sc_global.h  sc_log.h  sc_mbuf.h  sc_port.h  sc_utils.h  sc_worker.h
ipsec-accel-close/: ipsec-constants.h  ipsec-core.c  ipsec-core.h  ipsec-port-cfg.c  ipsec-port-cfg.h  ipsec-utils.c  ipsec.c  meson.build  run.sh
ipsec-secgw/: aes-128.cfg  esp.c  ipsec-secgw.c  ipsec.c  ipsec_process.c  meson.build  sa.c
kv-accel-close/: meson.build  monitor-core.c  monitor-core.h  monitor-port-cfg.c  monitor.c  run.sh
microbench/dma/host/: dma.c  dma_copy.c  dma_copy_core.c  dma_copy_core.h  dma_main.c  meson.build
microbench/multiaccel/sha&regex/: meson.build  multiaccel.c  multiaccel.cc  multiaccel.h  multiaccel_main.c  multiaccel_main.cc  props.c  props.cc  props.h  regex_job.c  regex_mempool.c  run.sh  sha_job.c
microbench/multiaccel/sha&regex/core/: discrete_generator.h  generator.h  properties.h  utils.h  workload.cc  workload.h
microbench/regex/: 100B_url.txt  200B_0p_url.txt  200B_20p_url.txt  200B_60p_url.txt  200B_80p_url.txt  200B_url.txt  20B_60p_url.txt  20B_80p_url.txt  20B_url.txt  30B_url.txt  analysis.py  data_to_scan.txt  dns_baseline.txt  email_addr.txt  full_url_regex_rules.txt  generate.py  meson.build  mymodule.lua  partial_url_regex_rules.txt  regex.c  regex.h  regex_main.c  regex_rules.txt  regex_scan_main.c  regex_scan_main.cc  regex_scan_sample.c  regex_scan_sample.cc  report.lua  run_batch-2.sh  run_batch.sh  run_dns.sh  run_imbalance.sh  run_nobatch.sh  run_pct.sh  run_simple_url_max.sh  run_singleflush.sh  run_url.sh  run_url_max.sh  run_wqd.sh  single_match_rule.txt  (+1 more)
microbench/sha/: mempool.c  meson.build  run.sh  run_max.sh  run_rate.sh  sha.c  sha.h  sha_main.c
monitor-accel-close/: monitor-l2p.c  monitor-l2p.h  monitor-port-cfg.h  monitor-utils.c
raw-flow/: meson.build  raw_flow.c
src/: sc_app.c  sc_doca.c  sc_doca_utils.c  sc_log.c  sc_main.c  sc_mbuf.c  sc_port.c  sc_utils.c  sc_worker.c
src/apps/sc_sketch/: meson.build  sketch.c  spooky-c.c
src/sc_sketch/: cm_sketch.c  meson.build  sketch.c
src/sc_utils/: map.c  (+1 more)
template/: meson.build  readme.md  subs_template.h  subs_template_dpdk.c  subs_template_flow.c  subs_template_main.c  subs_template_params.c  subs_template_utils.c
test/: meson.build  test.c  test.h  test_ipsec.c  test_ipsec_perf.c
test-flow-perf/: meson.build
testpmd/: meson.build  run.sh  run_fwd.sh  testpmd-constant.h  testpmd-constants.h  testpmd-l2p.c  testpmd-port-cfg.c  testpmd-port-cfg.h  testpmd.c  testpmd.h
testpmd-flow/: testpmd-port-cfg.h  testpmd-utils.c  testpmd.c
(+167 files in other folders)
